Finished GAM. Included chl a instead of open water days and selected for model GI.

--- a/PanArctic_DSL_statistics.Rmd
+++ b/PanArctic_DSL_statistics.Rmd
@@ -34,7 +34,8 @@ library(kableExtra)   # Pretty tables
 library(mgcv)         # Fit GAM
 library(gratia)       # Visualise GAM
 library(visreg)       # Visualise GAM
-library(tidymv)       # Predict GAM
+library(itsadug)      # Predict GAM
+library(MetBrewer)    # Pretty colour palettes
 library(MuMIn)        # AIC weights
 library(DT)           # Interactive table
 library(rstatix)      # Pipe-friendly stats
@@ -88,13 +89,11 @@ phy_laea <- phy_grid_laea %>% # Remote sensing: physics reanalysis
   dplyr::select(year, area, xc, yc, cell_res, depth, thetao, velocity, so)
 seaice_laea <- seaice_grid_laea %>% # Remote sensing: seaice concentration
   dplyr::select(year, area, xc, yc, cell_res, openwater_duration, mean_ice_conc)
-chl_laea <- chl_grid_laea %>% # Remote sensing: chlorophyll a
-  dplyr::select(-lat, -lon)
 
 stat_laea <- SA_laea %>%
   left_join(., phy_laea, by = c("year", "xc", "yc", "area", "cell_res")) %>% 
   left_join(., seaice_laea, by = c("year", "xc", "yc", "area", "cell_res")) %>%
-  left_join(., chl_laea, by = c("year", "xc", "yc", "area", "cell_res")) %>%
+  left_join(., chl_grid_laea, by = c("year", "xc", "yc", "area", "cell_res")) %>%
   filter(depth == 222) # Select physics at 222 m depth
 ```
 
@@ -176,7 +175,7 @@ stat_laea <- stat_laea %>%
                                 IHO_area == "The Northwestern Passages" ~ "CAA",
                                 IHO_area == "Baffin Bay" ~ "BB",
                                 IHO_area == "Davis Strait" ~ "DS"),
-                      levels = c("WAO_BF", "BF", "CAA", "BB", "DS", "EAO"))) %>%
+                      levels = c("WAO_BF", "CAA", "BB", "DS", "EAO"))) %>%
   filter(depth == 222) %>% # Select physics at 222 m depth
   ungroup() %>%
   dplyr::select(-xc_phy, -yc_phy, -year_phy, -xc_chl, -yc_chl, -year_chl)
@@ -208,19 +207,11 @@ plot_grid(stat_laea %>%
           ncol = 1, align = "hv", axis = "tblr")
 ```
 
-NA replacement worked well for ice concentration. Since the missing chl values are for areas with at least 76 % ice concentration and less than 8 days of open water, I use the median chl value in those conditions, which is 0.2600639mg m-3.
+NA replacement worked well for ice concentration. There are still missing chl values, so these cells are excluded from further analyses.
 
-```{r median-chl}
-stat_laea %>%
-  filter(mean_ice_conc > 76) %>%
-  summarise(median_chl = median(chl, na.rm = T))
-```
-
-```{r fill-NA-chl}
+```{r exclude-NA-chl}
 stat_laea <- stat_laea %>%
-  rowwise() %>%
-  mutate(chl = if_else(is.na(chl) == T, 0.2600639, chl)) %>% 
-  ungroup()
+  filter(is.na(chl) == F) 
 ```
 
 ```{r map-chl-NA}
@@ -239,7 +230,7 @@ stat_laea %>%
 Check the total number of observations per group.
 
 ```{r sample-numbers}
-test <- stat_laea %>%
+stat_laea %>%
   group_by(IHO_area) %>% 
   summarise(n = n())
 ```
@@ -262,66 +253,63 @@ stat_laea %>%
 ```
 
 ```{r map-ow, fig.height=3, fig.width=7}
-stat_laea %>% # Openwater duration
+seaice_grid_laea %>% # Openwater duration
   ggplot(aes(x = xc,  y = yc)) +
-  geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), fill = "grey80") +
   geom_tile(aes(fill = openwater_duration)) +
+  geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group),
+               fill = "grey80") +
   scale_fill_viridis_c("Day", option = "plasma", na.value = "red") +
   facet_wrap(~ year, ncol = 3) +
   ggtitle("Openwater duration") +
   coord_fixed(xlim = c(-2600, 1100), ylim = c(-1800, 1900), expand = F) + 
-  theme(axis.text = element_blank(), axis.ticks = element_blank(), axis.title = element_blank())
+  theme(axis.text = element_blank(), axis.ticks = element_blank(),
+        axis.title = element_blank())
 ```
 
-```{r map-ice-week, fig.height=3, fig.width=7}
-stat_laea %>% # Openwater duration
+```{r map-chl, fig.height=3, fig.width=7}
+chl_grid_laea %>% # Temperature
   ggplot(aes(x = xc,  y = yc)) +
-  geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), fill = "grey80") +
-  geom_tile(aes(fill = ice_week)) +
-  scale_fill_viridis_c("Week", option = "viridis", na.value = "red") +
+  geom_tile(aes(fill = chl)) +
+  geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group),
+               fill = "grey80") +
+  scale_fill_cmocean("chl (mg m-3)", name = "algae", limits = c(0,5),
+                     na.value = "red") +
   facet_wrap(~ year, ncol = 3) +
-  ggtitle("Week ice breakup") +
+  ggtitle("chlorophyll") +
   coord_fixed(xlim = c(-2600, 1100), ylim = c(-1800, 1900), expand = F) + 
-  theme(axis.text = element_blank(), axis.ticks = element_blank(), axis.title = element_blank())
-```
-
-```{r map-thetao, fig.height=3, fig.width=7}
-stat_laea %>% # Temperature
-  ggplot(aes(x = xc,  y = yc)) +
-  geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), fill = "grey80") +
-  geom_tile(aes(fill = thetao)) +
-  scale_fill_cmocean("Temp (dC)", name = "thermal", na.value = "red") +
-  facet_wrap(~ year, ncol = 3) +
-  ggtitle("Temperature at 222 m depth") +
-  coord_fixed(xlim = c(-2600, 1100), ylim = c(-1800, 1900), expand = F) + 
-  theme(axis.text = element_blank(), axis.ticks = element_blank(), axis.title = element_blank())
+  theme(axis.text = element_blank(), axis.ticks = element_blank(), 
+        axis.title = element_blank())
 ```
 
 ```{r map-velocity, fig.height=3, fig.width=7}
-stat_laea %>% # Ice concentration
+phy_grid_laea %>% # Ice concentration
   ggplot(aes(x = xc,  y = yc)) +
-  geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), fill = "grey80") +
-  geom_tile(aes(fill = velocity)) +
-  scale_fill_cmocean("velo (cm/s)", name = "speed", na.value = "red") +
+  geom_tile(aes(fill = velocity*100)) +
+  geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group),
+               fill = "grey80") +
+  scale_fill_cmocean("velo (cm/s)", name = "speed", limits = c(0,8),
+                     na.value = "red") +
   facet_wrap(~ year, ncol = 3) +
   ggtitle("Current velocity at 222 m depth") +
   coord_fixed(xlim = c(-2600, 1100), ylim = c(-1800, 1900), expand = F) + 
-  theme(axis.text = element_blank(), axis.ticks = element_blank(), axis.title = element_blank())
+  theme(axis.text = element_blank(), axis.ticks = element_blank(), 
+        axis.title = element_blank())
 ```
 
 # Spatial and interannual variability
 
 ```{r prep-diff}
 SA_diff <- SA_grid_laea %>%
-  filter(empty_clean == F) %>%
   dplyr::select(year, IHO_area, NASC_int, SA_int, NASC_int, CM) %>%
-  mutate(IHO_area = factor(case_when(IHO_area == "East Arctic Ocean" ~ "EAO",
-                                     IHO_area == "West Arctic Ocean" ~ "WAO_BF",
-                                     IHO_area == "Beaufort Sea" ~ "WAO_BF",
-                                     IHO_area == "The Northwestern Passages" ~ "CAA",
-                                     IHO_area == "Baffin Bay" ~ "BB",
-                                     IHO_area == "Davis Strait" ~ "DS"),
-                           levels = c("WAO_BF", "CAA", "BB", "DS", "EAO")),
+  mutate(IHO_area = 
+           factor(
+             case_when(IHO_area == "East Arctic Ocean" ~ "EAO",
+                       IHO_area == "West Arctic Ocean" ~ "WAO_BF",
+                       IHO_area == "Beaufort Sea" ~ "WAO_BF",
+                       IHO_area == "The Northwestern Passages" ~ "CAA",
+                       IHO_area == "Baffin Bay" ~ "BB",
+                       IHO_area == "Davis Strait" ~ "DS"),
+             levels = c("WAO_BF", "CAA", "BB", "DS", "EAO")),
          year = factor(year))
 ```
 
@@ -393,13 +381,13 @@ SA_diff %>% # Kruskal wallis interannual difference SA within group
 
 There was no interannual differences in SA within each region (WAO_BF - H = 4.8395483, *p* = 0.0889; CAA - H = 6.9278752, *p* = 0.0313; BB - H = 0.0968, *p* = 0.0889; DS - H = 0.9470, *p* = 0.0889; EAO - H = 5.0263899, *p* = 0.0810). Therefore, there seems to be no need for a random effect for interannual variability within years.
 
-# HGAM - Tweedie NASC
+# HGAM - Gamma NASC
 
 ## Data preparation
 
 ```{r GAM-prep}
 SA_df <- stat_laea %>%
-  dplyr::select(year, xc, yc, IHO_area, NASC_int, SA_int, velocity, thetao, so, openwater_duration, mean_ice_conc) %>%
+  dplyr::select(year, xc, yc, IHO_area, NASC_int, SA_int, velocity, thetao, so, openwater_duration, mean_ice_conc, chl) %>%
   group_by(IHO_area) %>%
   mutate(year = factor(year),
          NASC_int_n = (NASC_int - min(NASC_int)) / (max(NASC_int) - min(NASC_int)),
@@ -417,42 +405,25 @@ Plot data.
 
 ```{r plot-data-area}
 SA_df %>%
-  ggplot(aes(x = v, y = SA_int, col = IHO)) +
+  ggplot(aes(x = v, y = NASC_int, col = IHO)) +
   geom_point() +
   geom_smooth(method = "gam", se = F, col = "grey20") +
-  facet_wrap(~ IHO) +
+  facet_wrap(~ IHO, scales = "free") +
   theme(legend.position = "none")
 
 SA_df %>%
-  ggplot(aes(x = o, y = SA_int, col = IHO)) +
+  ggplot(aes(x = o, y = NASC_int, col = IHO)) +
   geom_point() +
   geom_smooth(method = "gam", se = F, col = "grey20") +
-  facet_wrap(~ IHO) +
+  facet_wrap(~ IHO, scales = "free") +
   theme(legend.position = "none")
-```
 
-```{r plot-distribution, fig.height=8, fig.width=10, message=FALSE}
-plot_grid(SA_df %>%
-            ggplot(aes(x = v, fill = IHO)) +
-            geom_histogram() +
-            facet_grid(~ IHO) +
-            theme(legend.position = "none"),
-          SA_df %>%
-            ggplot(aes(x = t, fill = IHO)) +
-            geom_histogram() +
-            facet_grid(~ IHO) +
-            theme(legend.position = "none"),
-          SA_df %>%
-            ggplot(aes(x = o, fill = IHO)) +
-            geom_histogram() +
-            facet_grid(~ IHO) +
-            theme(legend.position = "none"),
-          SA_df %>%
-            ggplot(aes(x = s, fill = IHO)) +
-            geom_histogram() +
-            facet_grid(~ IHO) +
-            theme(legend.position = "none"),
-          ncol = 1)
+SA_df %>%
+  ggplot(aes(x = chl, y = NASC_int, col = IHO)) +
+  geom_point() +
+  geom_smooth(method = "gam", se = F, col = "grey20") +
+  facet_wrap(~ IHO, scales = "free") +
+  theme(legend.position = "none")
 ```
 
 Check correlations.
@@ -465,42 +436,65 @@ corr <- SA_df %>% # Compute Spearman correlation matrix
 ggcorrplot(corr, type = "lower", lab = T, title = "corr")
 ```
 
-# Velocity
-
-I decided to fit hierarchical generalized additive model due to their flexibility in modelling non linear relationships. I am interested in the effect of velocity and primary production on mesopelagic density. I fit separate GAMs for each covariate. I follow the model structure from Pedersen et al. 2019.
+# Velocity and chlorophyll
 
 ## Model fitting
 
-```{r velo-HGAM-fit}
+In model GS the random intercept is already included in the `s(bs = "fs")` term.
+
+```{r HGAM-fit}
 # Model G
-velo_G <- gam(NASC_int ~ s(v, k = 5, bs = "tp") + # Global smoothers
-                 s(IHO, bs = "re") + # Random intercept
-                 s(IHO, year, bs = "re"), # Random effect 
-            data = SA_df, family = tw(link = "log"), method = "REML")
+GAM_G <- gam(NASC_int ~ 
+               # First order effects
+               s(v, k = 5, bs = "tp") + # Global smoothers
+               s(chl, k = 5, bs = "tp") + # Global smoothers
+               s(IHO, bs = "re") + # Random intercept
+               # Second order effects
+               s(IHO, year, bs = "re"), # Random effect
+            data = SA_df, family = Gamma(link = "log"), method = "REML")
 # Model GS
-velo_GS <- gam(NASC_int ~ s(v, k = 5, bs = "tp") + # Global smoothers
-                 s(v, IHO, bs = "fs", k = 5) + # Group-level smoothers (random intercept already included)
-                 s(IHO, year, bs = "re"), # Random effect 
-            data = SA_df, family = tw(link = "log"), method = "REML")
+GAM_GS <- gam(NASC_int ~ 
+                # First order effects
+                s(v, k = 5, bs = "tp") + # Global smoothers
+                s(chl, k = 5, bs = "tp") + # Global smoothers
+                s(IHO, bs = "re") + # Random intercept
+                # Second order effects
+                s(v, IHO, bs = "fs", k = 5) + # Group-level smoothers
+                s(chl, IHO, bs = "fs", k = 5) + # Group-level smoothers
+                s(IHO, year, bs = "re"), # Random effect
+              data = SA_df, family = Gamma(link = "log"), method = "REML")
 # Model GI
-velo_GI <- gam(NASC_int ~ s(v, k = 5, bs = "tp") + # Global smoothers
-                 s(IHO, bs = "re") + # Random intercept
-                 s(v, by = IHO, k = 5, bs = "tp") + # Group-level smoother
-                 s(year, IHO, bs = "re"), # Random effect
-               data = SA_df, family = tw(link = "log"), method = "REML")
+GAM_GI <- gam(NASC_int ~
+                # First order effects
+                s(v, k = 5, bs = "tp") + # Global smoothers
+                s(chl, k = 5, bs = "tp") + # Global smoothers
+                s(IHO, bs = "re") + # Random intercept
+                # Secnd order effects
+                s(v, by = IHO, k = 5, bs = "tp") + # Group-level smoother
+                s(chl, by = IHO, k = 5, bs = "tp") + # Group-level smoother
+                s(year, IHO, bs = "re"), # Random effect
+               data = SA_df, family = Gamma(link = "log"), method = "REML")
 
 # Summary metrics
-velo_AIC <- AIC(velo_G, velo_GS, velo_GI) %>% 
+GAM_AIC <- AIC(GAM_G, GAM_GS, GAM_GI) %>% 
   rownames_to_column() %>%
   rename(model = rowname)
 # Metrics data frame
-data.frame(model = c("velo_G", "velo_GS", "velo_GI"),
-                       reml = round(c(velo_G$gcv.ubre, velo_GS$gcv.ubre, velo_GI$gcv.ubre), 2), 
-                       dev_expl = round(c((1 - (velo_G$deviance / velo_G$null.deviance)) * 100,
-                                          (1 - (velo_GS$deviance / velo_GS$null.deviance)) * 100,
-                                          (1 - (velo_GI$deviance / velo_GI$null.deviance)) * 100), 2),
-                       r2 = round(c(summary(velo_G)$r.sq, summary(velo_GS)$r.sq, summary(velo_GI)$r.sq), 2)) %>%
-  full_join(., velo_AIC, by = "model") %>%
+data.frame(model = c("GAM_G", "GAM_GS", "GAM_GI"),
+           reml = round(c(GAM_G$gcv.ubre,
+                          GAM_GS$gcv.ubre, 
+                          GAM_GI$gcv.ubre), 
+                        2), 
+           dev_expl = round(c(
+             (1 - (GAM_G$deviance / GAM_G$null.deviance)) * 100,
+             (1 - (GAM_GS$deviance / GAM_GS$null.deviance)) * 100,
+             (1 - (GAM_GI$deviance / GAM_GI$null.deviance)) * 100),
+             2),
+           r2 = round(c(summary(GAM_G)$r.sq,
+                        summary(GAM_GS)$r.sq, 
+                        summary(GAM_GI)$r.sq),
+                      2)) %>%
+  full_join(., GAM_AIC, by = "model") %>%
   mutate(df = round(df, 3),
          AIC = round(AIC, 3),
          dAIC = round(AIC - min(AIC), 2),
@@ -510,16 +504,16 @@ data.frame(model = c("velo_G", "velo_GS", "velo_GI"),
   datatable(class = "cell-border stribe", rownames = F)
 ```
 
-```{r veloG-summary}
-summary(velo_G)
+```{r GAMG-summary}
+summary(GAM_G)
 ```
 
-```{r veloGS-summary}
-summary(velo_GS)
+```{r GAMGS-summary}
+summary(GAM_GS)
 ```
 
-```{r veloGI-summary}
-summary(velo_GI)
+```{r GAMGI-summary}
+summary(GAM_GI)
 ```
 
 ## Model checking
@@ -528,37 +522,37 @@ summary(velo_GI)
 
 First I check the basis size k. `k-indexes` are \> 1 or close to 1 so the basis size is large enough. The residual plot look good too.
 
-```{r veloG-basis-size-residuals}
-appraise(velo_G)
-k.check(velo_G)
+```{r GAMGS-basis-size-residuals}
+appraise(GAM_GS)
+k.check(GAM_GS)
 ```
 
-```{r veloGS-basis-size-residuals}
-appraise(velo_GS)
-k.check(velo_GS)
-```
-
-```{r veloGI-basis-size-residuals}
-appraise(velo_GI)
-k.check(velo_GI)
+```{r GAMGI-basis-size-residuals}
+appraise(GAM_GI)
+k.check(GAM_GI)
 ```
 
 ### Resiudals against covariates
 
-```{r veloGS-residuals-covariates, message=FALSE}
-velo_GS_resid <- bind_cols(SA_df, residuals.gam(velo_GS)) %>%
-  rename(resid = "...14")
-plot_grid(velo_GS_resid %>%
+```{r GAMGS-residuals-covariates, message=FALSE}
+GAM_GS_resid <- bind_cols(SA_df, residuals.gam(GAM_GS)) %>%
+  rename(resid = "...15")
+plot_grid(GAM_GS_resid %>%
             ggplot(aes(x = v, y = resid)) + 
             geom_hline(yintercept = 0, col = "red") +
             labs(x = "velocity") +
             geom_point(), 
-           velo_GS_resid %>%
+          GAM_GS_resid %>%
+            ggplot(aes(x = chl, y = resid)) + 
+            geom_hline(yintercept = 0, col = "red") +
+            labs(x = "chlorophyll") +
+            geom_point(), 
+          GAM_GS_resid %>%
             ggplot(aes(x = IHO, y = resid)) + 
             geom_hline(yintercept = 0, col = "red") +
             labs(x = "area") +
             geom_boxplot(fill = NA), 
-          velo_GS_resid %>%
+          GAM_GS_resid %>%
             ggplot(aes(x = year, y = resid)) + 
             geom_hline(yintercept = 0, col = "red") +
             labs(x = "year") +
@@ -566,209 +560,208 @@ plot_grid(velo_GS_resid %>%
 ```
 
 ```{r veloGI-residuals-covariates, message=FALSE}
-velo_GI_resid <- bind_cols(SA_df, residuals.gam(velo_GI)) %>%
-  rename(resid = "...14")
-plot_grid(velo_GI_resid %>%
+GAM_GI_resid <- bind_cols(SA_df, residuals.gam(GAM_GI)) %>%
+  rename(resid = "...15")
+plot_grid(GAM_GI_resid %>%
             ggplot(aes(x = v, y = resid)) + 
             geom_hline(yintercept = 0, col = "red") +
             labs(x = "velocity") +
             geom_point(), 
-           velo_GI_resid %>%
+          GAM_GI_resid %>%
+            ggplot(aes(x = chl, y = resid)) + 
+            geom_hline(yintercept = 0, col = "red") +
+            labs(x = "chlorophyll") +
+            geom_point(), 
+          GAM_GI_resid %>%
             ggplot(aes(x = IHO, y = resid)) + 
             geom_hline(yintercept = 0, col = "red") +
             labs(x = "area") +
             geom_boxplot(fill = NA), 
-          velo_GI_resid %>%
+          GAM_GI_resid %>%
             ggplot(aes(x = year, y = resid)) + 
             geom_hline(yintercept = 0, col = "red") +
             labs(x = "year") +
             geom_boxplot(fill = NA))
 ```
 
-## Model selection
+I select `model GI` because it explains the most deviance, has the best metrics and the better residuals.
+
+## Term selection
 
 I turn on the double penalty (`select = TRUE`) and check the covariates that has been shrunk.
 
 ```{r GAM-selection}
 # Model GI
-GAMgi_p <- gam(SA_int_n ~ s(IHO, bs = "re") + #s(year, IHO, bs = "re") + # Random effects and intercepts
-               s(v, k = 5, bs = "tp", m = 2) + s(o, k = 5, bs = "tp", m = 2) + # Global smoothers
-               s(v, by = IHO, k = 5, bs = "tp", m = 1) + s(o, by = IHO, k = 5, bs = "tp", m = 1), # Group-level smoothers
-            data = SA_df, family = "gaussian", method = "REML", select = TRUE)
-summary(GAMgi_p)
+GAM_GI_p <- gam(NASC_int ~
+                # First order effects
+                s(v, k = 5, bs = "tp") + # Global smoothers
+                s(chl, k = 5, bs = "tp") + # Global smoothers
+                s(IHO, bs = "re") + # Random intercept
+                # Second order effects
+                s(v, by = IHO, k = 5, bs = "tp") + # Group-level smoother
+                s(chl, by = IHO, k = 5, bs = "tp") + # Group-level smoother
+                s(year, IHO, bs = "re"), # Random effect
+               data = SA_df, family = Gamma(link = "log"), method = "REML",
+               select = T)
+summary(GAM_GI_p)
+```
+
+All covariates are important.
+
+## Model predictions
+
+I predict the model to get the smooths in the response scale (NASC). I need to create a specific data frame for this with the factors of interest `IHO` and `year`, and covariates `v` and `chl`.
+
+```{r summary-SA-df}
+SA_df %>%
+  dplyr::select(IHO, year, v, chl) %>%
+  # group_by(IHO, year) %>%
+  group_by(IHO) %>%
+  get_summary_stats(type = "common")
+```
+
+```{r data-frame-pred}
+res = 20 # resolution for predictions
+# WAO and BF
+SA_WAO_BF <- data.frame(
+  IHO = factor(rep(rep(rep("WAO_BF", res), 3), 2)),
+  year = factor(rep(c(rep(2015, res), rep(2016, res), rep(2017, res)), 2)),
+  var = c(rep("v", res * 3), rep("chl", res * 3)),
+  v = c(rep(seq(0.801, 7.554, length.out = res), 3), # Velocity
+        rep(3.032, res * 3)), # Dummy
+  chl = c(rep(0.245, res * 3), # Dummy
+          rep(seq(0.111, 0.857, length.out = res), 3))) # Chlorophyll
+# CAA
+SA_CAA <- data.frame(
+  IHO = factor(rep(rep(rep("CAA", res), 3), 2)),
+  year = factor(rep(c(rep(2015, res), rep(2016, res), rep(2017, res)), 2)),
+  var = c(rep("v", res * 3), rep("chl", res * 3)),
+  v = c(rep(seq(0.564, 2.097, length.out = res), 3), # Velocity
+        rep(1.218, res * 3)), # Dummy
+  chl = c(rep(0.405, res * 3), # Dummy
+          rep(seq(0.234, 0.806, length.out = res), 3))) # Chlorophyll
+# BB
+SA_BB <- data.frame(
+  IHO = factor(rep(rep(rep("BB", res), 3), 2)),
+  year = factor(rep(c(rep(2015, res), rep(2016, res), rep(2017, res)), 2)),
+  var = c(rep("v", res * 3), rep("chl", res * 3)),
+  v = c(rep(seq(0.167, 6.357, length.out = res), 3), # Velocity
+        rep(1.807, res * 3)), # Dummy
+  chl = c(rep(1.005, res * 3), # Dummy
+          rep(seq(0.283, 2.539, length.out = res), 3))) # Chlorophyll
+# DS
+SA_DS <- data.frame(
+  IHO = factor(rep(rep(rep("DS", res), 3), 2)),
+  year = factor(rep(c(rep(2015, res), rep(2016, res), rep(2017, res)), 2)),
+  var = c(rep("v", res * 3), rep("chl", res * 3)),
+  v = c(rep(seq(0.513, 4.205, length.out = res), 3), # Velocity
+        rep(2.159, res * 3)), # Dummy
+  chl = c(rep(0.413, res * 3), # Dummy
+          rep(seq(0.319, 0.685, length.out = res), 3))) # Chlorophyll
+# EAO
+SA_EAO <- data.frame(
+  IHO = factor(rep(rep(rep("EAO", res), 3), 2)),
+  year = factor(rep(c(rep(2015, res), rep(2016, res), rep(2017, res)), 2)),
+  var = c(rep("v", res * 3), rep("chl", res * 3)),
+  v = c(rep(seq(0.525, 5.997, length.out = res), 3), # Velocity
+        rep(2.209, res * 3)), # Dummy
+  chl = c(rep(1.355, res * 3), # Dummy
+          rep(seq(0.089, 4.063, length.out = res), 3))) # Chlorophyll
+# Combine datasets
+SA_new <- bind_rows(SA_WAO_BF, SA_CAA, SA_BB, SA_DS, SA_EAO)
+```
+
+Get GAM predictions for the new data. I then calculate the average functional response for all years.
+
+```{r GAMGI-pred}
+ilink <- family(GAM_GI)$linkinv # Get link function
+pred <- predict(GAM_GI, SA_new, type = "link", se.fit = TRUE) %>% # Predict data
+  bind_cols(., SA_new) %>%
+  transform(lwr_ci = ilink(fit - (2 * se.fit)), # Calculate lower CI
+            upr_ci = ilink(fit + (2 * se.fit)), # Calculate upper CI
+            fitted = ilink(fit)) %>% # Calculate fit
+  group_by(IHO, var, v, chl) %>%
+  summarise(NASC_fit = mean(fitted), # Calculate average functional response
+            NASC_lwr_ci = mean(lwr_ci),
+            NASC_upr_ci = mean(upr_ci)) %>%
+  mutate(SA_fit = 10 * log10(NASC_fit), # Convert to SA
+         SA_lwr_ci = 10 * log10(NASC_lwr_ci),
+         SA_upr_ci = 10 * log10(NASC_upr_ci))
+# Save data
+save(pred, GAM_GI, file = "data/statistics/GAM_results.RData")
 ```
 
 ## Model visualization
 
 Quick partial effects plot with `gratia::draw`.
 
-```{r draw-GAM}
-draw(GAMgs, residuals = TRUE, scales = "free")
+```{r draw-GAMGI}
+draw(GAM_GS, residuals = TRUE, scales = "free")
 ```
 
-I predict the data and then use that dataframe to plot it in a "clean" way with `ggplot`.
+Plot to see if predictions worked well.
 
-```{r predict-GAM}
-# Fitted GAMs
-pred_v <- fitted_values(GAMgi, terms = c("s(v)", "s(v):IHOWAO", "s(v):IHOBF", "s(v):IHOCAA", "s(v):IHOBB", "s(v):IHODS", "s(v):IHOEAO")) %>% # Fit velocity
-  rename(v_fit = fitted, 
-         v_se = se,
-         v_lower = lower,
-         v_upper = upper) 
-pred_o <- fitted_values(GAMgi, terms = c("s(o)", "s(o):IHOWAO", "s(o):IHOBF", "s(o):IHOCAA", "s(o):IHOBB", "s(o):IHODS", "s(o):IHOEAO")) %>% # Fit open water
-  rename(o_fit = fitted, 
-         o_se = se,
-         o_lower = lower,
-         o_upper = upper)
-pred_GAM <- left_join(SA_df, pred_v, by = c("IHO", "v", "o")) %>%
-  left_join(., pred_o, by = c("IHO", "v", "o")) 
-
-# Partial effects
-part_eff_GAM <- smooth_estimates(GAMgi) %>% # Evaluate smooths
-  add_confint()
-part_res_SA <- SA_df %>% # add partial residuals to data
-  add_partial_residuals(GAMgi)
-
-# Save predictions
-save(pred_GAM, GAMgi, file = "data/statistics/GAM_results.RData")
-
-rm(pred_v, pred_o)
+```{r GAMGI-ggplot, fig.height=8, fig.width=8}
+plot_grid(
+  pred %>%
+    filter(var == "v") %>%
+    ggplot() +
+    geom_line(aes(x = v, y = NASC_fit)) +
+    geom_ribbon(aes(x = v, ymin = NASC_lwr_ci, ymax = NASC_upr_ci), alpha = 0.1) +
+    geom_point(data = SA_df, aes(x = v, y = NASC_int, group = IHO)) + 
+    facet_wrap(~ IHO, scales = "free"),
+  pred %>%
+    filter(var == "chl") %>%
+    ggplot() +
+    geom_line(aes(x = chl, y = NASC_fit)) +
+    geom_ribbon(aes(x = chl, ymin = NASC_lwr_ci, ymax = NASC_upr_ci), alpha = 0.1) +
+    geom_point(data = SA_df, aes(x = chl, y = NASC_int, group = IHO)) + 
+    facet_wrap(~ IHO, scales = "free"),
+  ncol = 1)
 ```
 
-```{r predict-GAM}
-# Fitted GAMs
-pred_v <- fitted_values(GAM4, terms = c("s(v)", "s(v,IHO)"), scale = "linear") %>% # Fit velocity
-  rename(v_fit = fitted, 
-         v_se = se,
-         v_lower = lower,
-         v_upper = upper) 
-pred_t <- fitted_values(GAM4, terms = c("s(t)", "s(t,IHO)")) %>% # Fit temperature
-  rename(t_fit = fitted, 
-         t_se = se,
-         t_lower = lower,
-         t_upper = upper)
-pred_o <- fitted_values(GAM4, terms = c("s(o)", "s(o,IHO)")) %>% # Fit open water
-  rename(o_fit = fitted, 
-         o_se = se,
-         o_lower = lower,
-         o_upper = upper)
-pred_GAM <- left_join(SA_df, pred_v, by = c("IHO", "year", "v", "o")) %>%
-  left_join(., pred_o, by = c("IHO", "year", "v", "o")) 
+Pretty plot.
 
-# Partial effects
-part_eff_GAM <- smooth_estimates(GAM4) %>% # Evaluate smooths
-  add_confint()
-part_res_SA <- SA_df %>% # add partial residuals to data
-  add_partial_residuals(GAM4)
-
-# Save predictions
-save(pred_GAM, GAM4, file = "data/statistics/GAM_results.RData")
-
-rm(pred_v, pred_t, pred_o)
+```{r GAMGI-pretty-ggplot, fig.height=8, fig.width=7}
+pred_plot <- pred %>%
+  mutate(IHO = factor(
+    case_when(IHO == "EAO" ~ "East Arctic\nOcean",
+              IHO == "WAO_BF" ~ "West Arctic Ocean\n&Beaufort Sea",
+              IHO == "CAA" ~ "Can. Arctic\nArchipelago",
+              IHO == "BB" ~ "Baffin Bay",
+              IHO == "DS" ~ "Davis Strait"),
+    levels = c("West Arctic Ocean\n&Beaufort Sea", "Can. Arctic\nArchipelago",
+               "Baffin Bay", "Davis Strait", "East Arctic\nOcean")))
+GAM_velo <- pred_plot %>%
+  filter(var == "v") %>%
+  ggplot() +
+  geom_line(aes(x = v, y = SA_fit, col = IHO), size = 0.8) +
+  geom_ribbon(aes(x = v, ymin = SA_lwr_ci, ymax = SA_upr_ci, fill = IHO), alpha = 0.1) +
+  scale_colour_manual(values = met.brewer("Johnson", n = 6, direction = -1)) +
+  scale_fill_manual(values = met.brewer("Johnson", n = 6, direction = -1)) +
+  coord_cartesian(ylim = c(-2, 50), expand = T) +
+  scale_x_continuous(breaks = seq(0, 10, 1)) +
+  labs(x = expression("Current velocity at 222 m (cm s"^-1*")"),
+       y = expression("S"[A]*" (dB re 1 m"^2*" nmi"^-2*")")) +
+  theme(panel.border = element_blank(),
+        axis.line = element_line(),
+        legend.title = element_blank(), 
+        legend.position = "top")
+GAM_chl <- pred_plot %>%
+  filter(var == "chl") %>%
+  ggplot() +
+  geom_line(aes(x = chl, y = SA_fit, col = IHO), size = 0.8) +
+  geom_ribbon(aes(x = chl, ymin = SA_lwr_ci, ymax = SA_upr_ci, fill = IHO), alpha = 0.1) +
+  scale_colour_manual(values = met.brewer("Johnson", n = 6, direction = -1)) +
+  scale_fill_manual(values = met.brewer("Johnson", n = 6, direction = -1)) +
+  coord_cartesian(ylim = c(-2, 50), expand = T) +
+  scale_x_continuous(breaks = seq(0, 10, 0.5)) +
+  labs(x = expression("Chlorophyll (mg m"^-3*")"),
+       y = expression("S"[A]*" (dB re 1 m"^2*" nmi"^-2*")")) +
+  theme(panel.border = element_blank(),
+        axis.line = element_line(),
+        legend.title = element_blank(), 
+        legend.position = "none")
+# Combine plots
+plot_grid(GAM_velo, GAM_chl, ncol = 1, rel_heights = c(1,0.8))
 ```
-
-Plot fitted GAM with `ggplot`.
-
-```{r ggplot-GAM, warning=FALSE}
-# col_pal <- c("#5BBCD6", "#00A08A", "#F2AD00", "#F98400", "#FF0000")# wesanderson::wes_palette("Darjeeling1", type = "discrete")
-# col_pal <- c("#5BBCD6",  "#00A08A", "#F98400", "#FF0000")# wesanderson::wes_palette("Darjeeling1", type = "discrete") 
-
-GAM_plot <- plot_grid(get_legend(ggplot(data = pred_GAM, aes(x = v, y = v_fit, fill = IHO, col = IHO)) + 
-                                   geom_point() +
-                                   # scale_colour_manual(values = col_pal) + 
-                                   # scale_fill_manual(values = col_pal) + 
-                                   theme(legend.position = "top", legend.title = element_blank())),
-          plot_grid(
-            pred_GAM %>% # velocity
-              ggplot(aes(x = v)) +
-              # geom_ribbon(aes(ymin = v_lower, ymax = v_upper, fill = IHO), alpha = 0.1) +
-              geom_line(aes(y = 10*log10(v_fit), col = IHO), size = 1) +
-              # scale_y_continuous(limits = c(0, 1), breaks = seq(0, 1, 0.5)) +
-              # scale_colour_manual(values = col_pal) +
-              # scale_fill_manual(values = col_pal) +
-              labs(x = expression("Velocity at 222 m (cm s"^-1*")"), 
-                   y = expression("S"[A]*"")) + 
-              theme(legend.position = "none"),
-            pred_GAM %>% # open water
-              ggplot(aes(x = o)) +
-              # geom_ribbon(aes(ymin = o_lower, ymax = o_upper, fill = IHO), alpha = 0.1) +
-              geom_line(aes(y = 10*log10(o_fit), col = IHO), size = 1) +
-              # scale_y_continuous(limits = c(0, 1), breaks = seq(0, 1, 0.5)) +
-              # scale_colour_manual(values = col_pal) + 
-              # scale_fill_manual(values = col_pal) + 
-              labs(x = "Open water (days)", 
-                   y = expression("S"[A]*"")) + 
-              theme(legend.position = "none")), 
-          nrow = 2, rel_heights = c(0.1, 1))
-GAM_plot
-```
-
-```{r}
-pred_GAM %>% # velocity
-  ggplot(aes(x = v)) +
-  # geom_ribbon(aes(ymin = v_lower, ymax = v_upper, fill = IHO), alpha = 0.1) +
-  geom_point(aes(y = SA_int_n)) +
-  geom_line(aes(y = v_fit, col = IHO), size = 1) +
-  # scale_y_continuous(limits = c(0, 1), breaks = seq(0, 1, 0.5)) +
-  facet_wrap(~ IHO, scales = "fixed") + 
-  # scale_colour_manual(values = col_pal) + 
-  # scale_fill_manual(values = col_pal) + 
-  labs(x = expression("Velocity at 222 m (cm s"^-1*")"), 
-       y = expression("S"[A]*"")) + 
-  theme(legend.position = "none")
-pred_GAM %>% # velocity
-  ggplot(aes(x = t)) +
-  # geom_ribbon(aes(ymin = t_lower, ymax = t_upper, fill = IHO), alpha = 0.1) +
-  geom_point(aes(y = NASC_int)) + 
-  geom_line(aes(y = t_fit, col = IHO), size = 1) +
-  # scale_y_continuous(limits = c(0, 1), breaks = seq(0, 1, 0.5)) +
-  facet_wrap(~ IHO, scales = "free") + 
-  scale_colour_manual(values = col_pal) + 
-  scale_fill_manual(values = col_pal) + 
-  labs(x = "Temp at 222 m (dc)", 
-       y = expression("S"[A]*"")) + 
-  theme(legend.position = "none")
-pred_GAM %>% # velocity
-  ggplot(aes(x = o)) +
-  # geom_ribbon(aes(ymin =o_lower, ymax = o_upper, fill = IHO), alpha = 0.1) +
-  geom_point(aes(y = NASC_int)) + 
-  geom_line(aes(y = o_fit, col = IHO), size = 1) +
-  # scale_y_continuous(limits = c(0, 1), breaks = seq(0, 1, 0.5)) +
-  facet_wrap(~ IHO, scales = "free") + 
-  scale_colour_manual(values = col_pal) + 
-  scale_fill_manual(values = col_pal) + 
-  labs(x = "Open water length (days)", 
-       y = expression("S"[A]*"")) + 
-  theme(legend.position = "none")
-```
-
-Plot partial effects.
-
-```{r partial-effect-plots}
-plot_grid(part_eff_GAM %>%
-            filter(smooth == "s(v)") %>%
-            ggplot() +
-            geom_rug(data = part_res_SA, aes(x = v), sides = "b", length = grid::unit(0.02, "npc")) +
-            geom_ribbon(aes(ymin = lower_ci, ymax = upper_ci, x = v), alpha = 0.2) +
-            geom_point(data = part_res_SA, aes(x = v, y = `s(v)`), col = "steelblue3", cex = 1.5) +
-            geom_line(aes(x = v, y = est), lwd = 1.2) +
-            labs(y = "Partial effect"),
-          part_eff_GAM %>%
-            filter(smooth == "s(t)") %>%
-            ggplot() +
-            geom_rug(data = part_res_SA, aes(x = t), sides = "b", length = grid::unit(0.02, "npc")) +
-            geom_ribbon(aes(ymin = lower_ci, ymax = upper_ci, x = t), alpha = 0.2) +
-            geom_point(data = part_res_SA, aes(x = t, y = `s(t)`), col = "steelblue3", cex = 1.5) +
-            geom_line(aes(x = t, y = est), lwd = 1.2) +
-            labs(y = "Partial effect"),
-          part_eff_GAM %>%
-            filter(smooth == "s(o)") %>%
-            ggplot() +
-            geom_rug(data = part_res_SA, aes(x = o), sides = "b", length = grid::unit(0.02, "npc")) +
-            geom_ribbon(aes(ymin = lower_ci, ymax = upper_ci, x = o), alpha = 0.2) +
-            geom_point(data = part_res_SA, aes(x = o, y = `s(o)`), col = "steelblue3", cex = 1.5) +
-            geom_line(aes(x = o, y = est), lwd = 1.2) +
-            labs(y = "Partial effect"))
-```
-
-'
